fixed multiple row spacing, updated cover image, added fontawesome icons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ body {
   }
 
   header {
-    background: url("/img/waves-header-bg.jpg");
+    background: url("/img/lake-edit.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
